--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/microservices": "^10.3.10",
     "@nestjs/platform-express": "^9.0.0",
+    "class-validator": "^0.14.1",
+    "dotenv": "^16.4.5",
+    "joi": "^17.13.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
