--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "joi": "^17.13.3",
+    "lodash": "^4.17.21",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
