--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.4.5",
     "joi": "^17.13.3",
     "lodash": "^4.17.21",
+    "nats": "^2.28.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
